--- a/conf/app.conf
+++ b/conf/app.conf
@@ -22,8 +22,8 @@ module.static=github.com/robfig/revel/modules/static
 
 db.import = github.com/mattn/go-sqlite3
 db.driver = sqlite3
-db.spec = :memory:
-#db.spec = sqlite.db
+#db.spec = :memory:
+db.spec = sqlite.db
 
 [dev]
 mode.dev=true
