--- a/conf/app.conf
+++ b/conf/app.conf
@@ -25,6 +25,9 @@ db.driver = sqlite3
 #db.spec = :memory:
 db.spec = sqlite.db
 
+recaptcha.private = "6LfFIucSAAAAAIGONUxESWtpg1Afn4TTSTgtEUYZ"
+recaptcha.public = "6LfFIucSAAAAAA0L8Ks5_f3B9tb_z8wmge7FGmyw"
+
 [dev]
 mode.dev=true
 results.pretty=true
