More editor space, Posts are sorted by an sort number

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -25,8 +25,8 @@ db.driver = sqlite3
 #db.spec = :memory:
 db.spec = sqlite.db
 
-recaptcha.private = "6LdHSucSAAAAADz8mPkhJndmfjj1alJJp730w3Qt"
-recaptcha.public = "6LdHSucSAAAAACwhML6GlQzFYZf398rP1kWw23QY"
+recaptcha.private = 6LdHSucSAAAAADz8mPkhJndmfjj1alJJp730w3Qt
+recaptcha.public = 6LdHSucSAAAAACwhML6GlQzFYZf398rP1kWw23QY
 
 [dev]
 mode.dev=true
