--- a/conf/app.conf
+++ b/conf/app.conf
@@ -67,8 +67,8 @@ session.expires = 720h
 # The date format used by Revel. Possible formats defined by the Go `time`
 # package (http://golang.org/pkg/time/#Parse)
 format.date     = 01/02/2006
-format.datetime = 01/02/2006 15:04
-
+format.datetime = Monday, 02-Jan-2006, 15:04
+# format.datetime = 01/02/2006 15:04
 
 # Determines whether the template rendering should use chunked encoding.
 # Chunked encoding can decrease the time to first byte on the client side by
