--- a/conf/app.conf
+++ b/conf/app.conf
@@ -93,8 +93,8 @@ i18n.default_language = en
 module.static=github.com/revel/revel/modules/static
 
 
-recaptcha.private=BOGUSPRIVATE
-recaptcha.public=BOGUSPUBLIC
+recaptcha.secret=BOGUSPRIVATE
+recaptcha.sitekey=BOGUSPUBLIC
 
 
 ################################################################################
