--- a/conf/app.conf
+++ b/conf/app.conf
@@ -92,7 +92,8 @@ i18n.default_language = en
 #  `Static.ServeModule("modulename","public")`
 module.static=github.com/revel/revel/modules/static
 
-
+# Path for sqlite and uploads
+# databasedir = /home/user/bnginx-data
 recaptcha.secret = BOGUSPRIVATE
 recaptcha.sitekey = BOGUSPUBLIC
 
