--- a/conf/app.conf
+++ b/conf/app.conf
@@ -90,7 +90,7 @@ i18n.default_language = en
 # Module to serve static content such as CSS, JavaScript and Media files
 # Allows Routes like this:
 #  `Static.ServeModule("modulename","public")`
-module.static=github.com/revel/revel/modules/static
+module.static=github.com/revel/modules/static
 
 # Path for sqlite and uploads
 # databasedir = /home/user/bnginx-data
@@ -120,13 +120,13 @@ watch = true
 
 # If you set watcher.mode = "eager", the server starts to recompile
 # your application every time your application's files change.
-watcher.mode = "normal"
-
+#watcher.mode = "normal"
+watcher.mode = "eager"
 
 # Module to run code tests in the browser
 # See:
 #   http://revel.github.io/manual/testing.html
-module.testrunner = github.com/revel/revel/modules/testrunner
+module.testrunner = github.com/revel/modules/testrunner
 
 
 # Where to log the various Revel logs
