Project restructuring, new sampling stepping function

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -17,7 +17,8 @@ app.secret = BOGUSPASS
 
 
 # The IP address on which to listen.
-http.addr = 127.0.0.1
+#http.addr = 127.0.0.1
+http.addr = 0.0.0.0
 
 # The port on which to listen.
 http.port = 9000
@@ -66,7 +67,7 @@ session.expires = 720h
 
 # The date format used by Revel. Possible formats defined by the Go `time`
 # package (http://golang.org/pkg/time/#Parse)
-format.date     = 01.02.2006
+format.date     = 2006.01.02
 format.datetime = Monday, 02 Jan 2006, 15:04
 # format.datetime = 01/02/2006 15:04
 
